--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -27,10 +27,12 @@ dist.dir=dist
 dist.jar=${dist.dir}/MyJCC.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 excludes=
+file.reference.charm-glisten-4.4.1-javadoc.jar=C:\\Users\\ASUS\\Desktop\\charm-glisten-4.4.1-javadoc.jar
 includes=**
 jar.compress=false
 javac.classpath=\
-    ${libs.MySQLDriver.classpath}
+    ${libs.MySQLDriver.classpath}:\
+    ${file.reference.charm-glisten-4.4.1-javadoc.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
