--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -1,9 +1,10 @@
 annotation.processing.enabled=true
 annotation.processing.enabled.in.editor=false
-annotation.processing.processor.options=
 annotation.processing.processors.list=
 annotation.processing.run.all.processors=true
 annotation.processing.source.output=${build.generated.sources.dir}/ap-source-output
+application.title=myjcc
+application.vendor=youssef
 build.classes.dir=${build.dir}/classes
 build.classes.excludes=**/*.java,**/*.form
 # This directory is removed when the project is cleaned:
@@ -26,11 +27,50 @@ dist.archive.excludes=
 dist.dir=dist
 dist.jar=${dist.dir}/myjcc.jar
 dist.javadoc.dir=${dist.dir}/javadoc
+endorsed.classpath=
 excludes=
+file.reference.commons-codec-1.15.jar=C:\\Users\\youssef\\Downloads\\jar_files\\commons-codec-1.15.jar
+file.reference.commons-io-2.7.jar=C:\\Users\\youssef\\Downloads\\jar_files\\commons-io-2.7.jar
+file.reference.commons-logging-1.2.jar=C:\\Users\\youssef\\Downloads\\jar_files\\commons-logging-1.2.jar
+file.reference.httpclient-4.5.13.jar=C:\\Users\\youssef\\Downloads\\jar_files\\httpclient-4.5.13.jar
+file.reference.httpcore-4.4.13.jar=C:\\Users\\youssef\\Downloads\\jar_files\\httpcore-4.4.13.jar
+file.reference.jackson-annotations-2.14.0.jar=C:\\Users\\youssef\\Downloads\\jar_files\\jackson-annotations-2.14.0.jar
+file.reference.jackson-core-2.14.0.jar=C:\\Users\\youssef\\Downloads\\jar_files\\jackson-core-2.14.0.jar
+file.reference.jackson-databind-2.14.0.jar=C:\\Users\\youssef\\Downloads\\jar_files\\jackson-databind-2.14.0.jar
+file.reference.jackson-dataformat-xml-2.14.0.jar=C:\\Users\\youssef\\Downloads\\jar_files\\jackson-dataformat-xml-2.14.0.jar
+file.reference.jackson-datatype-jsr310-2.14.0.jar=C:\\Users\\youssef\\Downloads\\jar_files\\jackson-datatype-jsr310-2.14.0.jar
+file.reference.jjwt-api-0.11.2.jar=C:\\Users\\youssef\\Downloads\\jar_files\\jjwt-api-0.11.2.jar
+file.reference.jjwt-impl-0.11.2.jar=C:\\Users\\youssef\\Downloads\\jar_files\\jjwt-impl-0.11.2.jar
+file.reference.jjwt-jackson-0.11.2.jar=C:\\Users\\youssef\\Downloads\\jar_files\\jjwt-jackson-0.11.2.jar
+file.reference.json-20220320.jar=C:\\Users\\youssef\\Downloads\\jar_files\\json-20220320.jar
+file.reference.slf4j-api-2.0.6.jar=C:\\Users\\youssef\\Downloads\\slf4j-api-2.0.6.jar
+file.reference.stax2-api-4.2.1.jar=C:\\Users\\youssef\\Downloads\\jar_files\\stax2-api-4.2.1.jar
+file.reference.twilio-9.2.4.jar=C:\\Users\\youssef\\Downloads\\jar_files\\twilio-9.2.4.jar
+file.reference.woodstox-core-6.4.0.jar=C:\\Users\\youssef\\Downloads\\jar_files\\woodstox-core-6.4.0.jar
+file.reference.zxing.jar=C:\\Users\\youssef\\Downloads\\zxing.jar\\zxing.jar
 includes=**
 jar.compress=false
 javac.classpath=\
-    ${libs.MySQLDriver.classpath}
+    ${libs.MySQLDriver.classpath}:\
+    ${file.reference.zxing.jar}:\
+    ${file.reference.twilio-9.2.4.jar}:\
+    ${file.reference.commons-codec-1.15.jar}:\
+    ${file.reference.commons-io-2.7.jar}:\
+    ${file.reference.commons-logging-1.2.jar}:\
+    ${file.reference.httpclient-4.5.13.jar}:\
+    ${file.reference.httpcore-4.4.13.jar}:\
+    ${file.reference.jackson-annotations-2.14.0.jar}:\
+    ${file.reference.jackson-core-2.14.0.jar}:\
+    ${file.reference.jackson-databind-2.14.0.jar}:\
+    ${file.reference.jackson-dataformat-xml-2.14.0.jar}:\
+    ${file.reference.jackson-datatype-jsr310-2.14.0.jar}:\
+    ${file.reference.jjwt-api-0.11.2.jar}:\
+    ${file.reference.jjwt-impl-0.11.2.jar}:\
+    ${file.reference.jjwt-jackson-0.11.2.jar}:\
+    ${file.reference.json-20220320.jar}:\
+    ${file.reference.stax2-api-4.2.1.jar}:\
+    ${file.reference.woodstox-core-6.4.0.jar}:\
+    ${file.reference.slf4j-api-2.0.6.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
