Ajout du métier ForgotPassword et API mailing

--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -27,12 +27,20 @@ dist.dir=dist
 dist.jar=${dist.dir}/ADMIN.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 excludes=
+file.reference.activation.jar=src\\API\\activation.jar
+file.reference.javax.mail.jar=src\\API\\javax.mail.jar
+file.reference.mail.jar=src\\API\\mail.jar
 file.reference.scenebuilder-kit-19.0.0.jar=C:\\Users\\moene\\Downloads\\scenebuilder-kit-19.0.0.jar
+file.reference.smtp.jar=src\\API\\smtp.jar
 includes=**
 jar.compress=false
 javac.classpath=\
     ${libs.MySQLDriver.classpath}:\
-    ${file.reference.scenebuilder-kit-19.0.0.jar}
+    ${file.reference.scenebuilder-kit-19.0.0.jar}:\
+    ${file.reference.javax.mail.jar}:\
+    ${file.reference.activation.jar}:\
+    ${file.reference.mail.jar}:\
+    ${file.reference.smtp.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
