--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -27,10 +27,14 @@ dist.dir=dist
 dist.jar=${dist.dir}/myjcc.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 excludes=
+file.reference.controlsfx-8.40.15.jar=C:\\Users\\wael\\Desktop\\five stars\\controlsfx-8.40.15.jar
+file.reference.controlsfx-8.40.15.jar-1=C:\\Users\\wael\\Desktop\\fivestars\\controlsfx-8.40.15.jar
 includes=**
 jar.compress=false
 javac.classpath=\
-    ${libs.MySQLDriver.classpath}
+    ${libs.MySQLDriver.classpath}:\
+    ${file.reference.controlsfx-8.40.15.jar}:\
+    ${file.reference.controlsfx-8.40.15.jar-1}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
