--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -29,12 +29,14 @@ dist.jar=${dist.dir}/myjcc.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
+file.reference.Downloads-jar_files=C:\\Users\\dhia\\Downloads\\jar_files
 file.reference.json-simple-1.1.1.jar=C:\\Users\\dhia\\Downloads\\json-simple-1.1.1.jar
 includes=**
 jar.compress=false
 javac.classpath=\
     ${libs.MySQLDriver.classpath}:\
-    ${file.reference.json-simple-1.1.1.jar}
+    ${file.reference.json-simple-1.1.1.jar}:\
+    ${file.reference.Downloads-jar_files}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
