Ajout du PasswordHash & UserSession

--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -29,6 +29,7 @@ dist.javadoc.dir=${dist.dir}/javadoc
 excludes=
 file.reference.activation.jar=src\\API\\activation.jar
 file.reference.javax.mail.jar=src\\API\\javax.mail.jar
+file.reference.jBCrypt-0.4.1.jar=src\\Utilities\\jBCrypt-0.4.1.jar
 file.reference.mail.jar=src\\API\\mail.jar
 file.reference.scenebuilder-kit-19.0.0.jar=C:\\Users\\moene\\Downloads\\scenebuilder-kit-19.0.0.jar
 file.reference.smtp.jar=src\\API\\smtp.jar
@@ -40,7 +41,8 @@ javac.classpath=\
     ${file.reference.javax.mail.jar}:\
     ${file.reference.activation.jar}:\
     ${file.reference.mail.jar}:\
-    ${file.reference.smtp.jar}
+    ${file.reference.smtp.jar}:\
+    ${file.reference.jBCrypt-0.4.1.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
