--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -31,12 +31,14 @@ endorsed.classpath=
 excludes=
 file.reference.Downloads-jar_files=C:\\Users\\dhia\\Downloads\\jar_files
 file.reference.json-simple-1.1.1.jar=C:\\Users\\dhia\\Downloads\\json-simple-1.1.1.jar
+file.reference.jsr179_1.0.jar=C:\\Program Files (x86)\\Java_ME_platform_SDK_8.3\\lib\\jsr179_1.0.jar
 includes=**
 jar.compress=false
 javac.classpath=\
     ${libs.MySQLDriver.classpath}:\
     ${file.reference.json-simple-1.1.1.jar}:\
-    ${file.reference.Downloads-jar_files}
+    ${file.reference.Downloads-jar_files}:\
+    ${file.reference.jsr179_1.0.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
