--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -29,6 +29,7 @@ dist.jar=${dist.dir}/myjcc.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
+file.reference.activation.jar=C:\\Users\\youssef\\Downloads\\activation.jar
 file.reference.commons-codec-1.15.jar=C:\\Users\\youssef\\Downloads\\jar_files\\commons-codec-1.15.jar
 file.reference.commons-io-2.7.jar=C:\\Users\\youssef\\Downloads\\jar_files\\commons-io-2.7.jar
 file.reference.commons-logging-1.2.jar=C:\\Users\\youssef\\Downloads\\jar_files\\commons-logging-1.2.jar
@@ -39,11 +40,14 @@ file.reference.jackson-core-2.14.0.jar=C:\\Users\\youssef\\Downloads\\jar_files\
 file.reference.jackson-databind-2.14.0.jar=C:\\Users\\youssef\\Downloads\\jar_files\\jackson-databind-2.14.0.jar
 file.reference.jackson-dataformat-xml-2.14.0.jar=C:\\Users\\youssef\\Downloads\\jar_files\\jackson-dataformat-xml-2.14.0.jar
 file.reference.jackson-datatype-jsr310-2.14.0.jar=C:\\Users\\youssef\\Downloads\\jar_files\\jackson-datatype-jsr310-2.14.0.jar
+file.reference.javax.mail.jar=C:\\Users\\youssef\\Downloads\\javax.mail.jar
 file.reference.jjwt-api-0.11.2.jar=C:\\Users\\youssef\\Downloads\\jar_files\\jjwt-api-0.11.2.jar
 file.reference.jjwt-impl-0.11.2.jar=C:\\Users\\youssef\\Downloads\\jar_files\\jjwt-impl-0.11.2.jar
 file.reference.jjwt-jackson-0.11.2.jar=C:\\Users\\youssef\\Downloads\\jar_files\\jjwt-jackson-0.11.2.jar
 file.reference.json-20220320.jar=C:\\Users\\youssef\\Downloads\\jar_files\\json-20220320.jar
+file.reference.mail.jar=C:\\Users\\youssef\\Downloads\\mail.jar
 file.reference.slf4j-api-2.0.6.jar=C:\\Users\\youssef\\Downloads\\slf4j-api-2.0.6.jar
+file.reference.smtp.jar=C:\\Users\\youssef\\Downloads\\smtp.jar
 file.reference.stax2-api-4.2.1.jar=C:\\Users\\youssef\\Downloads\\jar_files\\stax2-api-4.2.1.jar
 file.reference.twilio-9.2.4.jar=C:\\Users\\youssef\\Downloads\\jar_files\\twilio-9.2.4.jar
 file.reference.woodstox-core-6.4.0.jar=C:\\Users\\youssef\\Downloads\\jar_files\\woodstox-core-6.4.0.jar
@@ -70,7 +74,11 @@ javac.classpath=\
     ${file.reference.json-20220320.jar}:\
     ${file.reference.stax2-api-4.2.1.jar}:\
     ${file.reference.woodstox-core-6.4.0.jar}:\
-    ${file.reference.slf4j-api-2.0.6.jar}
+    ${file.reference.slf4j-api-2.0.6.jar}:\
+    ${file.reference.javax.mail.jar}:\
+    ${file.reference.smtp.jar}:\
+    ${file.reference.activation.jar}:\
+    ${file.reference.mail.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
