upload img done

--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -29,16 +29,24 @@ dist.jar=${dist.dir}/myjcc.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
-file.reference.Downloads-jar_files=C:\\Users\\dhia\\Downloads\\jar_files
+file.reference.jar_files__1_.zip=C:\\Users\\dhia\\Downloads\\jar_files (1).zip
+file.reference.josm-latest.jar=C:\\Users\\dhia\\Downloads\\josm-latest.jar
 file.reference.json-simple-1.1.1.jar=C:\\Users\\dhia\\Downloads\\json-simple-1.1.1.jar
 file.reference.jsr179_1.0.jar=C:\\Program Files (x86)\\Java_ME_platform_SDK_8.3\\lib\\jsr179_1.0.jar
+file.reference.mapbox-sdk-core-4.9.0.jar=C:\\Users\\dhia\\Downloads\\jar_files (1)\\mapbox-sdk-core-4.9.0.jar
+file.reference.mapbox-sdk-geojson-4.9.0.jar=C:\\Users\\dhia\\Downloads\\jar_files (1)\\mapbox-sdk-geojson-4.9.0.jar
+file.reference.mapbox-sdk-services-4.9.5.jar=C:\\Users\\dhia\\Downloads\\jar_files (1)\\mapbox-sdk-services-4.9.5.jar
 includes=**
 jar.compress=false
 javac.classpath=\
     ${libs.MySQLDriver.classpath}:\
     ${file.reference.json-simple-1.1.1.jar}:\
-    ${file.reference.Downloads-jar_files}:\
-    ${file.reference.jsr179_1.0.jar}
+    ${file.reference.jsr179_1.0.jar}:\
+    ${file.reference.josm-latest.jar}:\
+    ${file.reference.jar_files__1_.zip}:\
+    ${file.reference.mapbox-sdk-core-4.9.0.jar}:\
+    ${file.reference.mapbox-sdk-geojson-4.9.0.jar}:\
+    ${file.reference.mapbox-sdk-services-4.9.5.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
