Contrats & Generation et Affichage PDF

--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -27,12 +27,16 @@ dist.dir=dist
 dist.jar=${dist.dir}/myjcc.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 excludes=
+file.reference.itextpdf-5.5.13.jar=C:\\Users\\Marwen\\Documents\\Projet\\Libraries\\itextpdf-5.5.13.jar
 file.reference.json-20220924.jar=C:\\Users\\Marwen\\Documents\\Projet\\Libraries\\json-20220924.jar
+file.reference.pdfbox-app-2.0.27.jar=C:\\Users\\Marwen\\Documents\\Projet\\Libraries\\pdfbox-app-2.0.27.jar
 includes=**
 jar.compress=false
 javac.classpath=\
     ${libs.MySQLDriver.classpath}:\
-    ${file.reference.json-20220924.jar}
+    ${file.reference.json-20220924.jar}:\
+    ${file.reference.itextpdf-5.5.13.jar}:\
+    ${file.reference.pdfbox-app-2.0.27.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
