pre integration finale

--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -36,6 +36,7 @@ file.reference.jsr179_1.0.jar=C:\\Program Files (x86)\\Java_ME_platform_SDK_8.3\
 file.reference.mapbox-sdk-core-4.9.0.jar=C:\\Users\\dhia\\Downloads\\jar_files (1)\\mapbox-sdk-core-4.9.0.jar
 file.reference.mapbox-sdk-geojson-4.9.0.jar=C:\\Users\\dhia\\Downloads\\jar_files (1)\\mapbox-sdk-geojson-4.9.0.jar
 file.reference.mapbox-sdk-services-4.9.5.jar=C:\\Users\\dhia\\Downloads\\jar_files (1)\\mapbox-sdk-services-4.9.5.jar
+file.reference.recaptcha4j-0.0.7.jar=C:\\Users\\dhia\\Downloads\\recaptcha4j-0.0.7\\recaptcha4j-0.0.7\\recaptcha4j-0.0.7.jar
 includes=**
 jar.compress=false
 javac.classpath=\
@@ -46,7 +47,8 @@ javac.classpath=\
     ${file.reference.jar_files__1_.zip}:\
     ${file.reference.mapbox-sdk-core-4.9.0.jar}:\
     ${file.reference.mapbox-sdk-geojson-4.9.0.jar}:\
-    ${file.reference.mapbox-sdk-services-4.9.5.jar}
+    ${file.reference.mapbox-sdk-services-4.9.5.jar}:\
+    ${file.reference.recaptcha4j-0.0.7.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
