--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -18,8 +18,12 @@ build.test.results.dir=${build.dir}/test/results
 #debug.transport=dt_socket
 debug.classpath=\
     ${run.classpath}
+debug.modulepath=\
+    ${run.modulepath}
 debug.test.classpath=\
     ${run.test.classpath}
+debug.test.modulepath=\
+    ${run.test.modulepath}
 # Files in build.classes.dir which should be excluded from distribution jar
 dist.archive.excludes=
 # This directory is removed when the project is cleaned:
@@ -28,15 +32,23 @@ dist.jar=${dist.dir}/MyJCC.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 excludes=
 file.reference.charm-glisten-4.4.1-javadoc.jar=C:\\Users\\ASUS\\Desktop\\charm-glisten-4.4.1-javadoc.jar
+file.reference.controlsfx-11.1.2.jar=C:\\Users\\ASUS\\Desktop\\controlsfx-11.1.2.jar
+file.reference.fontawesomefx-commons-9.1.2.jar=C:\\Users\\ASUS\\Desktop\\jar_files\\fontawesomefx-commons-9.1.2.jar
+file.reference.fontawesomefx-fontawesome-4.7.0-9.1.2.jar=C:\\Users\\ASUS\\Desktop\\jar_files\\fontawesomefx-fontawesome-4.7.0-9.1.2.jar
 includes=**
 jar.compress=false
 javac.classpath=\
     ${libs.MySQLDriver.classpath}:\
-    ${file.reference.charm-glisten-4.4.1-javadoc.jar}
+    ${file.reference.charm-glisten-4.4.1-javadoc.jar}:\
+    ${file.reference.fontawesomefx-commons-9.1.2.jar}:\
+    ${file.reference.fontawesomefx-fontawesome-4.7.0-9.1.2.jar}:\
+    ${file.reference.controlsfx-11.1.2.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
 javac.external.vm=true
+javac.modulepath=
+javac.processormodulepath=
 javac.processorpath=\
     ${javac.classpath}
 javac.source=1.8
@@ -44,6 +56,8 @@ javac.target=1.8
 javac.test.classpath=\
     ${javac.classpath}:\
     ${build.classes.dir}
+javac.test.modulepath=\
+    ${javac.modulepath}
 javac.test.processorpath=\
     ${javac.test.classpath}
 javadoc.additionalparam=
@@ -69,9 +83,13 @@ run.classpath=\
 # You may also define separate properties like run-sys-prop.name=value instead of -Dname=value.
 # To set system properties for unit tests define test-sys-prop.name=value:
 run.jvmargs=
+run.modulepath=\
+    ${javac.modulepath}
 run.test.classpath=\
     ${javac.test.classpath}:\
     ${build.test.classes.dir}
+run.test.modulepath=\
+    ${javac.test.modulepath}
 source.encoding=UTF-8
 src.dir=src
 test.src.dir=test
